--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -14,8 +14,10 @@ textarea{
 }
 
 textarea:focus {
-  outline: 3px solid #06AED5;
-  box-shadow: 2px 2px 4px #000000;
+  outline: none;
+  border: 3px solid #06AED5;
+  border-radius: 4px;
+  box-shadow: 1px 1px 5px #06AED5;
   z-index: 9999;
 }
 
@@ -79,4 +81,8 @@ textarea:focus {
   font-size: 20px;
   transition: all .3s ease-in-out;
   color: black;
+}
+
+.saveBtn:focus {
+  outline: none;
 }
